# hpsilab-quant-finance-mcp

./: .gitignore  LICENSE  README.md  env.example  glama.json  manifest.json  pyproject.toml  pyrightconfig.json  requirements.txt  server.json
.github/workflows/: ci.yml
examples/: claude_desktop_config.json  cursor_config.json  prompts.md
src/: server.py
src/hpsilab_mcp_server/: server.py
src/hpsilab_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_server.py
