
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hpsilab-mcp-server"
version = "0.1.0"
description = "HPSILab MCP Server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.0",
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
hpsilab-mcp-server = "hpsilab_mcp_server.server:main"