
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hpsilab-mcp-server"
version = "0.3.0"
description = "Quant finance MCP server for stock analysis, options analytics, implied volatility, Monte Carlo simulation, AI prediction, and backtesting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Haiyun Hu" }
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "quantitative-finance",
    "financial-research",
    "stock-analysis",
    "options-analytics",
    "implied-volatility",
    "monte-carlo",
    "backtesting",
    "ai-agent",
    "claude-mcp",
    "cursor-mcp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "requests>=2.32.0",
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
hpsilab-mcp-server = "hpsilab_mcp_server.server:main"

[project.urls]
Homepage = "https://hpsilab.com"
Repository = "https://github.com/haiyunsky/hpsilab-mcp-server"
"MCP Directory" = "https://glama.ai/mcp/servers/haiyunsky/hpsilab-mcp-server"
"Python REST SDK" = "https://pypi.org/project/hpsilab-mcp/"
